--- a/Education.html
+++ b/Education.html
@@ -41,11 +41,12 @@ text-shadow: 4px 4px 4px #aaa;
 
   <body>
     <center>
-<div> An Excelsior 10th grade student.</div>
+<div> About my Education</div>
     </center>
-      <center>
-        <div>Welcome to my Portfolio.</div>
-      </center>
+    <text align="left">
+      <h6> I go to NFA North, and I am in Excelsior Academy. I'm in
+tenth grade, and I like it. I am taking 2 college courses in my grade, with a few other people.  </h6>
+    </text>
 </body>
 
 </html>
