--- a/Interests.html
+++ b/Interests.html
@@ -41,11 +41,11 @@ text-shadow: 4px 4px 4px #aaa;
 
   <body>
     <center>
-<div> An Excelsior 10th grade student.</div>
+<div> About my Interests</div>
     </center>
-      <center>
-        <div>Welcome to my Portfolio.</div>
-      </center>
+    <text align="left">
+      <h6>I like to play a lot of video games on my free time. I love to play soccer. I am on the school soccer team as well. I play for a travel soccer team call Real FC Galaxy.</h6>
+    </text>
 </body>
 
 </html>
