--- a/Index.html
+++ b/Index.html
@@ -46,6 +46,12 @@ text-shadow: 4px 4px 4px #aaa;
       <center>
         <div>Welcome to my Portfolio.</div>
       </center>
+      <center>
+      <img src="http://newburghschools.org/departments/highschoolredesign/RedesignOverlay.jpg">
+    </center>
+      <center>
+      <img src="http://www.newburghschools.org/schools/nfa/ptech/ExcelsiorLogo.png">
+    </center>
 </body>
 
 </html>
