--- a/Interests.html
+++ b/Interests.html
@@ -46,6 +46,9 @@ text-shadow: 4px 4px 4px #aaa;
     <text align="left">
       <h6>I like to play a lot of video games on my free time. I love to play soccer. I am on the school soccer team as well. I play for a travel soccer team call Real FC Galaxy.</h6>
     </text>
+    <center>
+      <img src="http://maxpreps.cbsistatic.com/includes/images/photo/enlarge.gif"
+    </center>
 </body>
 
 </html>
