--- a/Index.html
+++ b/Index.html
@@ -34,6 +34,8 @@ text-shadow: 4px 4px 4px #aaa;
 		<th bg color="green"><a href="Family.html"> Family </a></th>
 		<th bg color="orange"><a href="Education.html"> Education </a> </th>
 		<th bg color="purple"><a href="Interests.html"> Interests </a> </th>
+    <th bg color="purple"><a href="Extra Curricular.html"> Extra Curricular </a> </th>
+
 </tr>
 </table>
 </center>
