--- a/Interests.html
+++ b/Interests.html
@@ -29,12 +29,14 @@ text-shadow: 4px 4px 4px #aaa;
 <table>
 
 	 <table border="8" style="width:100%">
-<tr>
-		<th bg color="red"><a href="Index.html">Home</a> </th>
-		<th bg color="green"><a href="Family.html"> Family </a></th>
-		<th bg color="orange"><a href="Education.html"> Education </a> </th>
-		<th bg color="purple"><a href="Interests.html"> Interests </a> </th>
-</tr>
+     <tr>
+     		<th bg color="red"><a href="Index.html">Home</a> </th>
+     		<th bg color="green"><a href="Family.html"> Family </a></th>
+     		<th bg color="orange"><a href="Education.html"> Education </a> </th>
+     		<th bg color="purple"><a href="Interests.html"> Interests </a> </th>
+         <th bg color="purple"><a href="Extra Curricular.html"> Extra Curricular </a> </th>
+
+     </tr>
 </table>
 </center>
 </h2>
