Dec 14th Javascript

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,38 @@ text-shadow: 4px 4px 4px #aaa;
 </center>
 </h2>
 
+<div class="dropdown">
+<button onclick="myFunction()" class="dropbtn">Deez NUts NIGAAAAA</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </div>
+</div>
+
+<script>
+/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
+
   <body>
     <center>
 <div> An Excelsior 10th grade student.</div>
