--- a/Index.html
+++ b/Index.html
@@ -33,14 +33,13 @@ text-shadow: 4px 4px 4px #aaa;
 		<th bg color="red"><a href="Index.html">Home</a> </th>
 		<th bg color="green"><a href="Family.html"> Family </a></th>
 		<th bg color="orange"><a href="Education.html"> Education </a> </th>
-		<th bg color="purple"><a href="Interests.html">
-                <div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Interests</button>
-                <div id="myDropdown" class="dropdown-content">
-                <a href="#home">Soccer</a>
-                <a href="#about">Music</a>
-                <a href="#contact">Video Games</a>
-                </div> </div> Interests </a> </th>
+		<th bg color="purple"><a href="Interests.html"> <div class="dropdown">
+    <button onclick="myFunction()" class="dropbtn">Interests</button>
+    <div id="myDropdown" class="dropdown-content">
+    <a href="#home">Soccer</a>
+    <a href="#about">Music</a>
+    <a href="#contact">Video Games</a>
+    </div> </div> </a> </th>
     <th bg color="purple"><a href="Extra Curricular.html"> Extra Curricular </a> </th>
 
 </tr>
