Thank You Mr Svarczkopf

--- a/Index.html
+++ b/Index.html
@@ -5,17 +5,7 @@
 uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
   <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-  <title> Jason Solis's Digital Portfolio </title>
-  <style>
-  body {
-background-color: black;
-color: white;
-font-family: 'Architects Daughter', serif;
-font-size: 48px;
-text-shadow: 4px 4px 4px #aaa;
-}
-    </style>
-
+<title> Jason Solis's Digital Portfolio </title>
 </head>
 <body>
   <h1>
@@ -23,55 +13,23 @@ text-shadow: 4px 4px 4px #aaa;
       <div>Jason Solis</div>
     </center>
   </h1>
+  <center>
+<ul class="navbar">
+		<li> <a href="Index.html"> Home </a> </li>
+		<li class="dropdown"> <a class="dropdown-toggle" href="#"> Family </a> </li>
+    <ul class="dropdown-menu">
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+    </ul>
+		<li> <a href="Education.html"> Education </a> </li>
+		<li> <a href="Interests.html"> Interests </a> </li>
+    <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
-
-<center>
-<table>
-
-	 <table border="8" style="width:100%">
-<tr>
-		<th bg color="red"><a href="Index.html">Home</a> </th>
-		<th bg color="green"><a href="Family.html"> Family </a></th>
-		<th bg color="orange"><a href="Education.html"> Education </a> </th>
-		<th bg color="purple"><a href="Interests.html"> <div class="dropdown">
-    <button onclick="myFunction()" class="dropbtn">Interests</button>
-    <div id="myDropdown" class="dropdown-content">
-    <a href="#home">Soccer</a>
-    <a href="#about">Music</a>
-    <a href="#contact">Video Games</a>
-    </div> </div> </a> </th>
-    <th bg color="purple"><a href="Extra Curricular.html"> Extra Curricular </a> </th>
-
-</tr>
-</table>
+</ul>
 </center>
-</h2>
-
-<script>
-/* When the user clicks on the button,
-toggle between hiding and showing the dropdown content */
-function myFunction() {
-    document.getElementById("myDropdown").classList.toggle("show");
-}
-
-// Close the dropdown if the user clicks outside of it
-window.onclick = function(event) {
-  if (!event.target.matches('.dropbtn')) {
-
-    var dropdowns = document.getElementsByClassName("dropdown-content");
-    var i;
-    for (i = 0; i < dropdowns.length; i++) {
-      var openDropdown = dropdowns[i];
-      if (openDropdown.classList.contains('show')) {
-        openDropdown.classList.remove('show');
-      }
-    }
-  }
-}
-</script>
-
-  <body>
-    <center>
+<center>
 <div> An Excelsior 10th grade student.</div>
     </center>
       <center>
