--- a/Index.html
+++ b/Index.html
@@ -18,10 +18,10 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 		<li> <a href="Index.html"> Home </a> </li>
 		<li class="dropdown"> <a class="dropdown-toggle" href="#"> Family </a> </li>
     <ul class="dropdown-menu">
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#"></a></li>
+      <li><a href="#"></a>Parents</li>
+      <li><a href="#"></a>Siblings</li>
+      <li><a href="#"></a>Grandparents</li>
+      <li><a href="#"></a>Other relatives</li>
     </ul>
 		<li> <a href="Education.html"> Education </a> </li>
 		<li> <a href="Interests.html"> Interests </a> </li>
