--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 </ul>
 </center>
+
+<script src="JavaScript.js"></script>
 <center>
 <div> An Excelsior 10th grade student.</div>
     </center>
