--- a/Index.html
+++ b/Index.html
@@ -18,10 +18,10 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 		<li> <a href="Index.html"> Home </a> </li>
 		<li class="dropdown"> <a class="dropdown-toggle" href="#"> Family </a> </li>
     <ul class="dropdown-menu">
-      <li><a href="#"></a>Parents</li>
-      <li><a href="#"></a>Siblings</li>
-      <li><a href="#"></a>Grandparents</li>
-      <li><a href="#"></a>Other relatives</li>
+      <li><a href="google.com"></a>Google</li>
+      <li><a href="youtube.com"></a>YouTube</li>
+      <li><a href="Family.html"></a>Family</li>
+      <li><a href="gmail.com"></a>Gmail</li>
     </ul>
 		<li> <a href="Education.html"> Education </a> </li>
 		<li> <a href="Interests.html"> Interests </a> </li>
@@ -39,9 +39,6 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       </center>
       <center>
       <img src="http://newburghschools.org/departments/highschoolredesign/RedesignOverlay.jpg">
-    </center>
-      <center>
-      <img src="http://www.newburghschools.org/schools/nfa/ptech/ExcelsiorLogo.png">
     </center>
 </body>
 
