--- a/Family.html
+++ b/Family.html
@@ -5,24 +5,7 @@
 uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
   <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-  <title> Jason Solis's Digital Portfolio </title>
-  <style>
-  body {
-background-color: black;
-color: white;
-font-family: 'Architects Daughter', serif;
-font-size: 48px;
-text-shadow: 4px 4px 4px #aaa;
-}
-
-h6 {
-
-color: GhostWhite;
-font-family: 'Architects Daughter', serif;
-font-size: 36px;
-text-shadow: 4px 4px 4px #aaa;
-}
-    </style>
+<title> Jason Solis's Digital Portfolio </title>
 
 </head>
 <body>
@@ -30,26 +13,18 @@ text-shadow: 4px 4px 4px #aaa;
     <center>
       <div>Jason Solis</div>
     </center>
-  </h1>
-
+</h1>
 
 <center>
-<table>
+<ul>
+  <li> <a href="Index.html"> Home </a> </li>
+  <li> <a href="Family.html"> Family </a> </li>
+  <li> <a href="Education.html"> Education </a> </li>
+  <li> <a href="Interests.html"> Interests </a> </li>
+  <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
-	 <table border="8" style="width:100%">
-     <tr>
-     		<th bg color="red"><a href="Index.html">Home</a> </th>
-     		<th bg color="green"><a href="Family.html"> Family </a></th>
-     		<th bg color="orange"><a href="Education.html"> Education </a> </th>
-     		<th bg color="purple"><a href="Interests.html"> Interests </a> </th>
-         <th bg color="purple"><a href="Extra Curricular.html"> Extra Curricular </a> </th>
-
-     </tr>
-</table>
+</ul>
 </center>
-</h2>
-
-  <body>
     <center>
 <div>About my family</div>
     </center>
