--- a/Index.html
+++ b/Index.html
@@ -14,23 +14,15 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
     </center>
   </h1>
   <center>
-<ul class="navbar">
+<ul>
 		<li> <a href="Index.html"> Home </a> </li>
-		<li class="dropdown"> <a class="dropdown-toggle" href="#"> Family </a> </li>
-    <ul class="dropdown-menu">
-      <li><a href="google.com"></a>Google</li>
-      <li><a href="youtube.com"></a>YouTube</li>
-      <li><a href="Family.html"></a>Family</li>
-      <li><a href="gmail.com"></a>Gmail</li>
-    </ul>
+		<li> <a href="Family.html"> Family </a> </li>
 		<li> <a href="Education.html"> Education </a> </li>
 		<li> <a href="Interests.html"> Interests </a> </li>
     <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
 </ul>
 </center>
-
-<script src="JavaScript.js"></script>
 <center>
 <div> An Excelsior 10th grade student.</div>
     </center>
