--- a/Extra Curricular.html
+++ b/Extra Curricular.html
@@ -26,17 +26,14 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 </ul>
 </center>
-</h2>
-
-  <body>
-    <center>
+  <center>
 <div> About my Extra Curricular</div>
     </center>
     <text align="left">
       <h6>I stay after school for track. I play soccer too. I also take an interest in the robotics club.</h6>
     </text>
     <center>
-      <img src="http://maxpreps.cbsistatic.com/includes/images/photo/enlarge.gif"
+      <img src="http://maxpreps.cbsistatic.com/includes/images/photo/enlarge.gif">
     </center>
 </body>
 
