--- a/Interests.html
+++ b/Interests.html
@@ -24,17 +24,14 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 </ul>
 </center>
-</h2>
-
-  <body>
-    <center>
+  <center>
 <div> About my Interests</div>
     </center>
     <text align="left">
       <h6>I like to play a lot of video games on my free time. I love to play soccer. I am on the school soccer team as well. I play for a travel soccer team call Real FC Galaxy.</h6>
     </text>
     <center>
-      <img src="http://maxpreps.cbsistatic.com/includes/images/photo/enlarge.gif"
+      <img src="http://maxpreps.cbsistatic.com/includes/images/photo/enlarge.gif">
     </center>
 </body>
 
