--- a/Index.html
+++ b/Index.html
@@ -13,16 +13,22 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       <div>Jason Solis</div>
     </center>
   </h1>
-  <center>
-<ul>
-		<li> <a href="Index.html"> Home </a> </li>
-		<li> <a href="Family.html"> Family </a> </li>
-		<li> <a href="Education.html"> Education </a> </li>
-		<li> <a href="Interests.html"> Interests </a> </li>
-    <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
+<nav>
+      <ul>
+		        <li> <a href="Index.html"> Home </a> </li>
+		        <li> <a href="#"> Family </a>
 
-</ul>
-</center>
+            <ul>
+                  <li><a href="#">My family</a></li>
+            </ul>
+
+            </li>
+		        <li> <a href="#"> Education </a> </li>
+		        <li> <a href="#"> Interests </a> </li>
+            <li> <a href="#"> Extra Curricular </a> </li>
+
+      </ul>
+</nav>
 <center>
 <div> An Excelsior 10th grade student.</div>
     </center>
