--- a/Index.html
+++ b/Index.html
@@ -23,9 +23,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
             </ul>
 
             </li>
-		        <li> <a href="#"> Education </a> </li>
+		        <li> <a href="#">School</a> </li>
 		        <li> <a href="#"> Interests </a> </li>
-            <li> <a href="#"> Extra Curricular </a> </li>
+            <li> <a href="#"> ExtraCurricular </a> </li>
 
       </ul>
 </nav>
