--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
             </li>
 		        <li> <a href="#">School</a> </li>
-		        <li> <a href="#"> Interests </a> </li>
+		        <li> <a href="#"> Hobbies </a> </li>
             <li> <a href="#"> ExtraCurricular </a> </li>
 
       </ul>
