--- a/Family.html
+++ b/Family.html
@@ -19,9 +19,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <ul>
   <li> <a href="Index.html"> Home </a> </li>
   <li> <a href="Family.html"> Family </a> </li>
-  <li> <a href="Education.html">School</a> </li>
-  <li> <a href="Interests.html"> Hobbies </a> </li>
-  <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
+  <li> <a href="Education.html"> Education </a> </li>
+  <li> <a href="Interests.html"> Interests </a> </li>
+  <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
 </ul>
 </center>
