--- a/Index.html
+++ b/Index.html
@@ -16,16 +16,10 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <nav>
       <ul>
 		        <li> <a href="Index.html"> Home </a> </li>
-		        <li> <a href="#"> Family </a>
-
-            <ul>
-                  <li><a href="#">My family</a></li>
-            </ul>
-
-            </li>
-		        <li> <a href="#">School</a> </li>
-		        <li> <a href="#"> Hobbies </a> </li>
-            <li> <a href="#"> ExtraCurricular </a> </li>
+		        <li> <a href="Family.html"> Family </a> </li>
+		        <li> <a href="Education.html">School</a> </li>
+		        <li> <a href="Interests.html"> Interests </a> </li>
+            <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
       </ul>
 </nav>
