--- a/Education.html
+++ b/Education.html
@@ -8,24 +8,24 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <title> Jason Solis's Digital Portfolio </title>
 </head>
 <body>
-  <h1>
     <center>
       <div>Jason Solis</div>
     </center>
-  </h1>
 
+    <ul class="navbar">
+          <li> <a href="Index.html"> Home </a> </li>
+          <li> <a href="Family.html"> Family </a> </li>
+          <li class="dropdown"> <a class="dropdown-toggle" href="Education.html">School</a>
+            <ul class="dropdown-menu">
+              <li class="cell"><a href="#">NFA North</a></li>
+              <li class="cell"><a href="#">South Middle</a></li>
+          </ul>
+          </li>
+          <li> <a href="Interests.html"> Interests </a> </li>
+          <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
-  <center>
-<ul>
-		<li> <a href="Index.html"> Home </a> </li>
-		<li> <a href="Family.html"> Family </a> </li>
-		<li> <a href="Education.html"> School </a> </li>
-		<li> <a href="Interests.html"> Hobbies </a> </li>
-    <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
-
-</ul>
-</center>
-
+    </ul>
+    <script src="app.js"></script>
     <center>
 <div> About my Education</div>
     </center>
