--- a/Family.html
+++ b/Family.html
@@ -9,22 +9,24 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 </head>
 <body>
-  <h1>
     <center>
       <div>Jason Solis</div>
     </center>
-</h1>
 
-<center>
-<ul>
-  <li> <a href="Index.html"> Home </a> </li>
-  <li> <a href="Family.html"> Family </a> </li>
-  <li> <a href="Education.html"> Education </a> </li>
-  <li> <a href="Interests.html"> Interests </a> </li>
-  <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
+    <ul class="navbar">
+          <li> <a href="Index.html"> Home </a> </li>
+          <li> <a href="Family.html"> Family </a> </li>
+          <li class="dropdown"> <a class="dropdown-toggle" href="Education.html">School</a>
+            <ul class="dropdown-menu">
+              <li class="cell"><a href="#">NFA North</a></li>
+              <li class="cell"><a href="#">South Middle</a></li>
+          </ul>
+          </li>
+          <li> <a href="Interests.html"> Interests </a> </li>
+          <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
-</ul>
-</center>
+    </ul>
+    <script src="app.js"></script>
     <center>
 <div>About my family</div>
     </center>
