--- a/Index.html
+++ b/Index.html
@@ -14,17 +14,17 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       <ul class="navbar">
 		        <li> <a href="Index.html"> Home </a> </li>
 		        <li> <a href="Family.html"> Family </a> </li>
-		        <li class="dropdown"> <a class="dropdown-toggle" href="Education.html">School</a>
+		        <li class="dropdown"> <a class="dropdown-toggle" href="#">School</a>
               <ul class="dropdown-menu">
-                <li class="cell"><a href="#">NFA North</a></li>
-                <li class="cell"><a href="#">South Middle</a></li>
+                <li><a href="newburghschools.org">NFA North</a></li>
+                <li><a href="newburghschools.org">South Middle</a></li>
             </ul>
             </li>
 		        <li> <a href="Interests.html"> Interests </a> </li>
             <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
 
       </ul>
-      <script src="app.js"></script>
+      <script src="JavaScript.js"></script>
 <center>
 <div> An Excelsior 10th grade student.</div>
     </center>
