--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 		        <li> <a href="Family.html"> Family </a> </li>
 		        <li class="dropdown"> <a class="dropdown-toggle" href="#">School</a>
               <ul class="dropdown-menu">
-                <li><a href="newburghschools.org">NFA North</a></li>
-                <li><a href="newburghschools.org">South Middle</a></li>
+                <li class="cell"><a href="newburghschools.org">NFA North</a></li>
+                <li class="cell"><a href="newburghschools.org">South Middle</a></li>
             </ul>
             </li>
 		        <li> <a href="Interests.html"> Interests </a> </li>
