--- a/Interests.html
+++ b/Interests.html
@@ -24,7 +24,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
           <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
 
     </ul>
-    <script src="app.js"></script>
+    <script src="JavaScript.js"></script>
   <center>
 <div> About my Interests</div>
     </center>
