--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
 uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
   <link rel="stylesheet" type="text/css" href="style.css"/>
 <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <title> Jason Solis's Digital Portfolio </title>
 </head>
 <body>
@@ -24,7 +25,6 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
             <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
 
       </ul>
-      <script src="JavaScript.js"></script>
 <center>
 <div> An Excelsior 10th grade student.</div>
     </center>
@@ -34,6 +34,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       <center>
       <img src="http://newburghschools.org/departments/highschoolredesign/RedesignOverlay.jpg">
     </center>
+    <script src="JavaScript.js"></script>
 </body>
 
 </html>
