--- a/Family.html
+++ b/Family.html
@@ -5,6 +5,7 @@
 uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
   <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <title> Jason Solis's Digital Portfolio </title>
 
 </head>
@@ -23,10 +24,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
           </ul>
           </li>
           <li> <a href="Interests.html"> Interests </a> </li>
-          <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
+          <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
     </ul>
-    <script src="JavaScript.js"></script>
     <center>
 <div>About my family</div>
     </center>
@@ -36,6 +36,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
         <h6>In my family, there are 5 main people. That includes my sister, Katherine,
 who is 16 and goes to NFA Main. My little brother, Dylan, who is 4, goes to Balmville Elementary School.  </h6>
       </text>
+        <script src="JavaScript.js"></script>
 </body>
 
 </html>
