--- a/Extra Curricular.html
+++ b/Extra Curricular.html
@@ -5,6 +5,7 @@
 uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
   <link rel="stylesheet" type="text/css" href="style.css">
 <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <title> Jason Solis's Digital Portfolio </title>
 
 </head>
@@ -23,7 +24,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
           </ul>
           </li>
           <li> <a href="Interests.html"> Interests </a> </li>
-          <li> <a href="Extra Curricular.html"> ExtraCurricular </a> </li>
+          <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
     </ul>
     <script src="JavaScript.js"></script>
@@ -35,7 +36,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
     </text>
     <center>
       <img src="http://maxpreps.cbsistatic.com/includes/images/photo/enlarge.gif">
-    </center>
+</center>
+<script src="JavaScript.js"></script>
 </body>
 
 </html>
