--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 		        <li> <a href="Family.html"> Family </a> </li>
 		        <li class="dropdown"> <a class="dropdown-toggle" href="#">School</a>
               <ul class="dropdown-menu">
-                <li class="cell"><a href="www.google.com">NFA North</a></li>
-                <li class="cell"><a href="newburghschools.org">South Middle</a></li>
+                <li class="cell"><a href="http://www.newburghschools.org/schools/nfa/index.php">NFA North</a></li>
+                <li class="cell"><a href="http://newburghschools.org/schools/south/index.php">South Middle</a></li>
             </ul>
             </li>
 		        <li> <a href="Interests.html"> Interests </a> </li>
