--- a/Family.html
+++ b/Family.html
@@ -19,8 +19,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
           <li> <a href="Family.html"> Family </a> </li>
           <li class="dropdown"> <a class="dropdown-toggle" href="Education.html">School</a>
             <ul class="dropdown-menu">
-              <li class="cell"><a href="#">NFA North</a></li>
-              <li class="cell"><a href="#">South Middle</a></li>
+              <li class="cell"><a href="http://www.newburghschools.org/schools/nfa/index.php">NFA North</a></li>
+              <li class="cell"><a href="http://newburghschools.org/schools/south/index.php">South Middle</a></li>
           </ul>
           </li>
           <li> <a href="Interests.html"> Interests </a> </li>
