--- a/Extra Curricular.html
+++ b/Extra Curricular.html
@@ -35,7 +35,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       <h6>I stay after school for track. I play soccer too. I also take an interest in the robotics club.</h6>
     </text>
     <center>
-      <img src="jsolisptech.github.io/fcb.png">
+      <img src="jsolisptech.github.io/fbc.png">
 </center>
 <script src="JavaScript.js"></script>
 </body>
