--- a/Education.html
+++ b/Education.html
@@ -8,9 +8,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <title> Jason Solis's Digital Portfolio </title>
 </head>
 <body>
-    <center>
+    <center><h1>
       <div>Jason Solis</div>
-    </center>
+    </h1></center>
 
     <ul class="navbar">
           <li> <a href="Index.html"> Home </a> </li>
@@ -30,8 +30,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <div> About my Education</div>
     </center>
     <text align="left">
-      <h6> I go to NFA North, and I am in Excelsior Academy. I'm in
-tenth grade, and I like it. I am taking 2 college courses in my grade, with a few other people.  </h6>
+      <h2> I go to NFA North, and I am in Excelsior Academy. I'm in
+tenth grade, and I like it. I am taking 2 college courses in my grade, with a few other people.  </h2>
     </text>
     <script src="JavaScript.js"></script>
 </body>
