--- a/Extra Curricular.html
+++ b/Extra Curricular.html
@@ -11,9 +11,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 </head>
 <body>
 
-    <center>
+    <center><h1>
       <div>Jason Solis</div>
-    </center>
+    </h1></center>
     <ul class="navbar">
           <li> <a href="Index.html"> Home </a> </li>
           <li> <a href="Family.html"> Family </a> </li>
@@ -32,10 +32,10 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <div> About my Extra Curricular</div>
     </center>
     <text align="left">
-      <h6>I stay after school for track. I play soccer too. I also take an interest in the robotics club.</h6>
+      <h2>I stay after school for track. I play soccer too. I also take an interest in the robotics club.</h2>
     </text>
     <center>
-      <img src="jsolisptech.github.io/fbc.png">
+      <img src="D:\jsolisptech.github.io\fbc.png">
 </center>
 <script src="JavaScript.js"></script>
 </body>
