--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <title> Jason Solis's Digital Portfolio </title>
 </head>
 <body>
-    <center>
+    <center><h1>
       <div>Jason Solis</div>
-    </center>
+    </h1></center>
       <ul class="navbar">
 		        <li> <a href="Index.html"> Home </a> </li>
 		        <li> <a href="Family.html"> Family </a> </li>
@@ -25,7 +25,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
             <li> <a href="Extra Curricular.html"> Extra Curricular </a> </li>
 
       </ul>
-      
+
 <center>
 <div> An Excelsior 10th grade student.</div>
     </center>
