--- a/Interests.html
+++ b/Interests.html
@@ -8,9 +8,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <title> Jason Solis's Digital Portfolio </title>
 <body>
-    <center>
+    <center><h1>
       <div>Jason Solis</div>
-    </center>
+    </h1></center>
 
     <ul class="navbar">
           <li> <a href="Index.html"> Home </a> </li>
@@ -29,10 +29,11 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 <div> About my Interests</div>
     </center>
     <text align="left">
-      <h6>I like to play a lot of video games on my free time. I love to play soccer. I am on the school soccer team as well. I play for a travel soccer team call Real FC Galaxy.</h6>
+      <h2>I like to play a lot of video games on my free time. I love to play soccer. I am on the school soccer team as well. I play for a travel soccer team call Real FC Galaxy.</h2>
     </text>
+    <br>
     <center>
-      <img src="jsolisptech.github.io/soccer.jpg">
+      <img src="D:\jsolisptech.github.io\soccer.jpg">
     </center>
     <script src="JavaScript.js"></script>
 </body>
