--- a/Family.html
+++ b/Family.html
@@ -10,9 +10,9 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 </head>
 <body>
-    <center>
+    <center><h1>
       <div>Jason Solis</div>
-    </center>
+    </h1></center>
 
     <ul class="navbar">
           <li> <a href="Index.html"> Home </a> </li>
@@ -33,8 +33,8 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 
       <text align="left">
-        <h6>In my family, there are 5 main people. That includes my sister, Katherine,
-who is 16 and goes to NFA Main. My little brother, Dylan, who is 4, goes to Balmville Elementary School.  </h6>
+        <h2>In my family, there are 5 main people. That includes my sister, Katherine,
+who is 16 and goes to NFA Main. My little brother, Dylan, who is 4, goes to Balmville Elementary School.  </h2>
       </text>
         <script src="JavaScript.js"></script>
 </body>
