--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       </ul>
 
 <center>
-<div> An Excelsior Academy Alumni, I am intrigued by the computer science world. I am constantly learning to improve my digital web skills. .</div>
+<div> An Excelsior Academy Alumni, I am intrigued by the computer science world. <br>  I am constantly learning to improve my digital web skills. </br> .</div>
     </center>
       <center>
         <div>Welcome to my Portfolio.</div>
