--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
         <div>Welcome to my Portfolio.</div>
       </center>
       <center>
-      <img src="http://newburghschools.org/departments/highschoolredesign/RedesignOverlay.jpg">
+      <img src="http://newburghschools.org/departments/highschoolredesign/RedesignOverlay.jpg"> </img>
     </center>
     <script src="JavaScript.js"></script>
 </body>
