--- a/Index.html
+++ b/Index.html
@@ -27,13 +27,13 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
       </ul>
 
 <center>
-<div> An Excelsior Academy Alumni, I am intrigued by the computer science world. <br>  I an constantly learning to improve my digital web skills. </br> .</div>
+<div> An Excelsior Academy Alumni, I am intrigued by the computer science world. <br>  I am constantly learning to improve my digital web skills. </br> .</div>
     </center>
       <center>
         <div>Welcome to my Portfolio.</div>
       </center>
       <center>
-      <img src="http://newburghschools.org/departments/highschoolredesign/RedesignOverlay.jpg"> </img>
+      <img src="https://pbs.twimg.com/profile_images/518062892092899328/PNZvruvU.png">
     </center>
     <script src="JavaScript.js"></script>
 </body>
