--- a/Experience.html
+++ b/Experience.html
@@ -33,8 +33,7 @@ uploads/2013/05/gradient-background-wallpaper-u-_-ibackgroundz_com2.jpg">
 
 
       <text align="left">
-        <h2>In my family, there are 5 main people. That includes my sister, Katherine,
-who is 16 and goes to NFA Main. My little brother, Dylan, who is 4, goes to Balmville Elementary School.  </h2>
+        <h2> I've had an internship with IBM in East Fishkill where I worked and collaborated with two other collegues. <br> Our job was to optimize a dicing microscope. </br> </h2>
       </text>
         <script src="JavaScript.js"></script>
 </body>
